--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 body{
        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        color: aliceblue;
-        background-color: #000000;
+        color: rgb(255, 255, 255);
+        background-color: #606666;
         
     
 }
@@ -16,8 +16,8 @@ body{
    
 }
 #links li{
-      border: 1px solid red;
-    float: left;
+      background: url(imagens/divisor.png)repeat-y left top;
+      float: left;
     
 
 }
@@ -27,10 +27,10 @@ body{
     line-height: 3em;
     text-decoration: none;
     color: #ffffff;
-
+    background:#159cb0 url(imagens/fundo-horizontal.png) ;
 }
 #links a:hover{
-    color: rgb(153, 1, 255);
+    color: rgb(0, 0, 0);
       
 }
 .sites a{
@@ -42,17 +42,26 @@ body{
     color: rgb(255, 124, 1); ;
 }
 
-#conteudo{border: 1px solid red;
+#conteudo{
     width: 70%;
     height: auto;
-    background: #000000;
+    background: #444343;
     font-size: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 10px;
     margin-top: 75px;
 
 }
-#rodape{
+ img{
+    margin: 10px 10px 0 0;
+  
+    width: 300px;
+    height: 400px;
+
+
+
+}
+.rodape{
     text-align: center;
     font-size: 10px;
 }
